fix scrollbar

--- a/style.css
+++ b/style.css
@@ -1,228 +1,225 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 a:hover {
-    color: rgb(197, 178, 153);
-    transition: .69s;
+  color: rgb(197, 178, 153);
+  transition: .69s;
 }
 
 
 ::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0);
+  width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #ffffff;
+  background: rgba(90, 90, 90);
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .typing-demo {
-    width: 14ch;
-    animation: typing 2s steps(14), blink .3s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 3px solid;
-    font-family: monospace;
-    font-size: 2em;
+  width: 14ch;
+  animation: typing 2s steps(14), blink .3s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
 }
 
 @keyframes typing {
-    from {
-        width: 0
-    }
+  from {
+    width: 0
+  }
 }
 
 @keyframes blink {
-    50% {
-        border-color: transparent
-    }
+  50% {
+    border-color: transparent
+  }
 }
 
 
 nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    font-family: 'Rubik';
-    background-color: #832A00;
-    transition: top 0.25s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  font-family: 'Rubik';
+  background-color: #832A00;
+  transition: top 0.25s;
 }
 
 .links {
-    float: right;
-    color: white;
-    padding: 15px;
+  float: right;
+  color: white;
+  padding: 15px;
 }
 
 #hi {
-    font-size: 3.5rem;
-    margin-bottom: 0;
-    color: mintcream;
+  font-size: 3.5rem;
+  margin-bottom: 0;
+  color: mintcream;
 }
 
 .subtitle {
-    padding: 0px 25px;
-    font-size: 1.4rem;
-    font-weight: 300;
-    font-style: italic;
-    color: aliceblue;
+  padding: 0px 25px;
+  font-size: 1.4rem;
+  font-weight: 300;
+  font-style: italic;
+  color: aliceblue;
 }
 
 main {
-    position: static;
-    font-family: Rubik;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    max-width: 100vw;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
+  position: static;
+  font-family: Rubik;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  max-width: 100vw;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
 }
 
 #welcome-section {
-    display: inherit;
-    flex-direction: inherit;
-    min-height: 100vh;
-    max-width: 100vw;
-    align-items: center;
-    justify-content: center;
-    background: #0F0B5B;
-    background: linear-gradient(90deg, rgb(18, 60, 100) 0%, rgb(5, 46, 85) 100%);
+  display: inherit;
+  flex-direction: inherit;
+  min-height: 100vh;
+  max-width: 100vw;
+  align-items: center;
+  justify-content: center;
+  background: #0F0B5B;
+  background: linear-gradient(90deg, rgb(18, 60, 100) 0%, rgb(5, 46, 85) 100%);
 }
 
 #project-title {
-    margin: 10% auto 100px;
+  margin: 10% auto 100px;
 }
 
 #projects {
-    display: inherit;
-    flex-direction: inherit;
-    min-height: 100vh;
-    max-width: 100vw;
-    align-items: center;
-    background: rgb(8, 42, 73);
+  display: inherit;
+  flex-direction: inherit;
+  min-height: 100vh;
+  max-width: 100vw;
+  align-items: center;
+  background: rgb(8, 42, 73);
 }
 
 #tile-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 #tags {
-    display: inherit;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  display: inherit;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 #description {
-    display: inherit;
-    flex-direction: column;
-    max-width: 100%;
-    padding: 0 15px 15px;
-    font-family: Rubik;
-    color: white;
+  display: inherit;
+  flex-direction: column;
+  max-width: 100%;
+  padding: 0 15px 15px;
+  font-family: Rubik;
+  color: white;
 }
 
 .tile {
-    display: flex;
-    padding: 20px;
-    margin: 25px;
-    flex-direction: column;
-    align-items: center;
-    flex: 1 1 40%;
-    min-width: 450px;
-    border-radius: 6px;
+  display: flex;
+  padding: 20px;
+  margin: 25px;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 1 40%;
+  min-width: 450px;
+  border-radius: 6px;
 }
 
 .project-img {
-    border-radius: 6px;
-    height: auto;
-    width: 25vw;
-    min-width: 500px;
+  border-radius: 6px;
+  height: auto;
+  width: 25vw;
+  min-width: 500px;
 }
 
 .desc-title {
-    font-size: 1.2rem;
-    text-align: center;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 .tag {
-    padding: 3px 8px;
-    margin: 5px;
-    font-family: Cambay;
-    font-size: 1rem;
-    font-weight: bold;
-    border-radius: 5px;
-    background-color: rgba(0, 1, 5, 0.40);
+  padding: 3px 8px;
+  margin: 5px;
+  font-family: Cambay;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: rgba(0, 1, 5, 0.40);
 }
 
 #contact {
-    background-color: #C88B33;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  background-color: #C88B33;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .socials {
-    height: 200px;
-    width: 350px;
-    display: inherit;
+  height: 200px;
+  width: 350px;
+  display: inherit;
 }
 
 .social-text {
-    color: black;
-    text-align: center;
+  color: black;
+  text-align: center;
 }
 
 .socials img {
-    height: auto;
-    opacity: 80%;
+  height: auto;
+  opacity: 80%;
 }
 
 #linked {
-    height: 77px;
+  height: 77px;
 }
 
 #mail {
-    height: 99px;
+  height: 99px;
 }
 
 #s1 {
-    align-items: flex-end;
+  align-items: flex-end;
 }
 
 #s2 {
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #s3 {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
